Whoa, fixing wrong colors

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -6,9 +6,8 @@
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  background: $grey-color-light;
   border-radius: 0.1875em;
-  border: 1px solid $grey-color;
+  border: 1px solid $border-color;
   color: $text-color;
   padding: 1em 1.5em;
 }
@@ -24,26 +23,4 @@
 
 .pagination a:hover, .pagination a:focus {
   color: $brand-color;
-  border: $grey-color
-}
-
-.pagination a:active {
-  background: $grey-color-light;
-}
-
-.pagination .button {
-  font-size: 1rem;
-  font-weight: 300;
-  letter-spacing: 1px;
-}
-
-.button-disabled {
-  background-color: $grey-color-light;
-}
-
-.button-disabled:hover,
-.button-disabled:active,
-.button-disabled:focus {
-  cursor: not-allowed;
-  background-color: $grey-color;
 }
